# evolutionary-computation

./: .gitignore  Dockerfile  docker-compose.yml  evolutionary.pyi  install.sh  pyproject.toml  result.json  run.sh  test.py  vapor.css
.streamlit/: config.toml
client/: data_loader.py  main.py  page_generator.py  problem.py  report_generator.py  streamlit_app.py  utils.py
client/components/: __init__.py  algorithm_explanation.py  page_template.py  report_template.py  simple_plots.py  tsp_plot.py
client/pages/: _raw_report_like.py  cached_deltas.py  candidates.py  greedy.py  lns.py  local.py  msls.py  regret.py  report_like.py  similarity_tests.py  test.py
evolutionary/: Cargo.toml  build.rs  pyproject.toml
evolutionary/src/: cached_deltas.rs  cached_deltas_base.rs  greedy_algorithms.rs  hybrid_evolutionary.rs  large_neighborhood_search.rs  lib.rs  local_search.rs  local_search_base.rs  local_search_candidates.rs  multi_local_search.rs  regret_heuristics.rs  similarity_tests.rs  utils.rs
evolutionary/tests/: hybrid.rs
metrics/: greedy_cycle.json  nn_to_any.json  nn_to_last.json  random.json
reports/report1/: random.csv
solutions/A/: greedy_cycle.txt  nn_to_any_point.txt  nn_to_last_point.txt  random.txt
solutions/B/: greedy_cycle.txt  nn_to_any_point.txt  nn_to_last_point.txt  random.txt
