[project]
name = "evol-ec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "maturin>=1.9.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "streamlit[charts]>=1.50.0",
]
