[project]
name = "evolutionary-computation"
version = "0.1.0"
description = "Add your description here" # TODO: add description
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "dill>=0.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyo3-stubgen>=0.3.0",
    "pyright>=1.1.406",
    "scipy>=1.16.2",
    "streamlit[charts]>=1.50.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "maturin>=1.9.6",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "evolutionary"
bindings = "pyo3"
python-source = "."
manifest-path = "evolutionary/Cargo.toml"
include = ["evolutionary.pyi"] 
