[package]
name = "evolutionary"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "evolutionary"
crate-type = ["cdylib"]

[features]
default = []
pyo3 = ["pyo3/extension-module"]

[dependencies]
csv = "1.3.1"
ndarray = "0.16.1"
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py311"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
flamegraph = "0.6.9"
